--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/codingnepal -->
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">  
+    <meta charset="utf-8" />
     <title>CodeSlayers</title>
-    <link rel="stylesheet" href="styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <div>
-      <img src="./Slayers.png" alt="">
+      <img src="./Slayers.png" alt="" />
     </div>
     <div class="wrapper">
-      <input type="text" class="input-field">
+      <div class="user-select">
+        <div class="time-limit">
+          <label for="time-limit">Select Time Limit:</label>
+          <select id="time-limit">
+            <option value="30">30 seconds</option>
+            <option value="60" selected>60 seconds</option>
+            <option value="90">90 seconds</option>
+            <option value="120">120 seconds</option>
+            <option value="240">240 seconds</option>
+          </select>
+        </div>
+        <div class="difficulty">
+          <label for="difficulty-level">Select Difficulty Level:</label>
+          <select id="difficulty-level">
+            <option value="easy">Easy</option>
+            <option value="moderate" selected>Moderate</option>
+            <option value="difficult">Difficult</option>
+          </select>
+        </div>
+      </div>
+      <input type="text" class="input-field" />
       <div class="content-box">
         <div class="typing-text">
           <p></p>
@@ -43,6 +62,5 @@
 
     <script src="js/text.js"></script>
     <script src="js/script.js"></script>
-  
   </body>
 </html>
