--- a/src/index.html
+++ b/src/index.html
@@ -1,66 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodeSlayers</title>
     <link rel="stylesheet" href="styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <div>
-      <img src="./Slayers.png" alt="" />
-    </div>
-    <div class="wrapper">
-      <div class="user-select">
-        <div class="time-limit">
-          <label for="time-limit">Select Time Limit:</label>
-          <select id="time-limit">
-            <option value="30">30 seconds</option>
-            <option value="60" selected>60 seconds</option>
-            <option value="90">90 seconds</option>
-            <option value="120">120 seconds</option>
-            <option value="240">240 seconds</option>
-          </select>
-        </div>
-        <div class="difficulty">
-          <label for="difficulty-level">Select Difficulty Level:</label>
-          <select id="difficulty-level">
-            <option value="easy">Easy</option>
-            <option value="moderate" selected>Moderate</option>
-            <option value="difficult">Difficult</option>
-          </select>
-        </div>
+    <div class="parent">
+      <div class="logo">
+        <img class="logoimg" src="./logo.png" alt="" />
+        <div class="codeslayers">Codeslayers</div>
       </div>
-      <input type="text" class="input-field" />
-      <div class="content-box">
-        <div class="typing-text">
-          <p></p>
-        </div>
-        <div class="content">
-          <ul class="result-details">
-            <li class="time">
-              <p>Counter:</p>
-              <span><b>60</b>s</span>
-            </li>
-            <li class="mistake">
-              <p>Accuracy%:</p>
-              <span>100</span>
-            </li>
-            <li class="wpm">
-              <p>WPM:</p>
-              <span>0</span>
-            </li>
-            <li class="cpm">
-              <p>Correct:</p>
-              <span>0</span>
-            </li>
-          </ul>
-          <button>Retry</button>
-        </div>
+      <div class="buttons">
+        <a href="./singleplayer.html">
+          <div class="single">
+            <img class="buttonimg" src="./single.png" alt="" />
+            <div class="singletext">Single Player Mode</div>
+          </div>
+        </a>
+        <a href="">
+          <div class="multi">
+            <img class="buttonimg" src="./multi.png" alt="" />
+            <div class="multitext">Multi Player Mode</div>
+          </div>
+        </a>
       </div>
     </div>
-
-    <script src="js/text.js"></script>
-    <script src="js/script.js"></script>
   </body>
 </html>
